wip: init auth0 part2 gui and bk
